z-index fixed

--- a/src/components/ListItem/ListItem.module.scss
+++ b/src/components/ListItem/ListItem.module.scss
@@ -1,5 +1,5 @@
 .body {
-  @apply flex flex-row py-3 mx-5 border-stroke items-start rounded-[10px] max-w-[750px] relative cursor-pointer;
+  @apply flex flex-row py-3 mx-5 border-stroke items-start rounded-[10px] max-w-[750px] relative cursor-pointer bg-mainBg;
 }
 
 .checkbox {
