--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -1,15 +1,15 @@
-.listContainer {
-  @apply relative bg-mainBg overflow-visible;
-}
+// .listContainer {
+//   @apply relative bg-mainBg overflow-visible;
+// }
 
 // .startDevider {
 //   @apply relative z-[11] h-[30px] bg-mainBg;
 // }
 
-.sectionName {
-  @apply relative;
-}
+// .sectionName {
+//   @apply relative;
+// }
 
-.listItem {
-  @apply mt-[0px];
-}
+// .listItem {
+//   @apply mt-[0px];
+// }
